[gd_scene load_steps=9 format=2]

[ext_resource path="res://stick.gd" type="Script" id=1]
[ext_resource path="res://art/stick.png" type="Texture" id=2]
[ext_resource path="res://sound/stick_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/miss.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.667954, 1 )
colors = PoolColorArray( 0, 1, 0.666667, 1, 0, 1, 0.666667, 0.752941, 0, 1, 0.666667, 0.498039 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 13, 4, 0 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.0
angular_velocity = 1.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Initial Velocity", "Scale", "Spread" ]

[sub_resource type="Animation" id=4]

length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ]
}

[node name="stick" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}
speed = 140

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="hit_particles" type="Particles2D" parent="." index="1"]

position = Vector2( 3, -9 )
emitting = false
amount = 48
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.5
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="particle_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/bump = SubResource( 4 )
blend_times = [  ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="4"]

build_mode = 0
polygon = PoolVector2Array( -16, 12, -9, -12, 16, -12, 23, 12 )

[node name="hit_sound" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="miss_sound" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="particle_timer" to="." method="_on_particle_timer_timeout"]

[connection signal="finished" from="hit_sound" to="." method="_on_hit_sound_finished"]

[connection signal="finished" from="miss_sound" to="." method="_on_miss_sound_finished"]


